# cubane

./: Cargo.toml  flake.nix  memory.x
src/: clocks.rs  exi.rs  logic_analyzer.rs  main.rs
